--- a/API/Test/Integration/Integration.csproj
+++ b/API/Test/Integration/Integration.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Api\Api.csproj" />
+    <ProjectReference Include="..\..\App\App.csproj" />
   </ItemGroup>
 
 </Project>
