--- a/API/Test/Unit/Unit.csproj
+++ b/API/Test/Unit/Unit.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Api\Api.csproj" />
+    <ProjectReference Include="..\..\App\App.csproj" />
   </ItemGroup>
 
 </Project>
